# parca-scrape-target-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  renovate-config.js
.github/workflows/: build-and-test.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  renovate.yaml  tiobe-scan.yaml  update-libs.yaml
src/: charm.py
tests/integration/: conftest.py  test_charm.py  test_tls.py
tests/unit/: conftest.py  test_charm.py
