[project]
name = "parca-scrape-target-operator"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "ops==2.17.1",
  "cosl>=0.0.51",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff==0.8.6",
  # Static
  "pyright",
  # Unit
  "pytest==8.3.4",
  "coverage[toml]==6.5.0",
  "ops[testing]>=2.17",
  # Integration
  "macaroonbakery==1.3.2",
  "pytest==8.3.4",
  "pytest-operator==0.39.0",
  "tenacity==9.0.0",
  "requests==2.32.3",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
