[project]
name = "parca-scrape-target-operator"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "ops==2.23.1",
  "cosl>=0.0.51",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff==0.12.9",
  # Static
  "pyright",
  # Unit
  "pytest==8.4.1",
  "coverage[toml]==6.5.0",
  "ops[testing]",
  # Integration
  "macaroonbakery==1.3.4",
  "tenacity==9.0.0",  # can't upgrade without bumping the python version too.
  "requests==2.32.4",
  "jubilant",
  "pytest-jubilant>=0.4.1",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
